# banyan-ingest

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  example_nemoparse.py  pyproject.toml
docs/: ROTATION_FEATURE_SUMMARY.md
src/banyan_extract/: cli.py
src/banyan_extract/ocr/: __init__.py  nemotron_ocr.py
src/banyan_extract/processor/: __init__.py  evaluate_extraction.py  marker_processor.py  nemoparse_processor.py  papermage_processor.py  pptx_processor.py  processor.py
src/banyan_extract/utils/: __init__.py  image_rotation.py
tests/: conftest.py
tests/data/doc_outputs/nemotron/: sample.md  sample_bbox.json  sample_table_0.csv
tests/data/doc_outputs/pptx/: slides.md
tests/data/docs/: slides.pptx
tests/integration/: test_nemoparse_examples.py  test_nemoparse_output_integration.py  test_nemoparse_processor_integration.py
tests/unit/: test_contour_detection.py  test_image_rotation.py  test_marker_output.py  test_nemoparse_output.py  test_nemoparse_processor.py  test_nemoparse_retry_logic.py  test_papermage_output.py  test_pptx_output.py  test_rotation_integration.py
